# air-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_NOTES.md  README.md  SCIENTIST_FINETUNING_PLAN.md  VERL_SETUP.md  air_mlgym.py  air_mlgym_minimal.py  experiments.md  log_book.md  mkdocs.yml  model_version.json  prime_rl_ttt.patch  pyproject.toml  simple_env.py
air/: PRIME_RL_SETUP.md  QUICKSTART.md  README_VERL.md  TREE_SEARCH_IMPROVEMENTS.md  __init__.py  adaptive_tree_search.py  compare_trajectories.py  linear_search.py  llm_guided_tree_search.py  mlgym_env.py  plot_feb22.py  plot_strong_baselines.py  prime_orchestrator.py  reflexion.py  rollout.py  run_exp3_batch.sh  run_exp3_llm_guidance.sh  run_exp3_v2.sh  run_exp3_v3.sh  run_exp3_v4_multitask.sh  run_multitask_experiments.sh  run_parallel.py  run_training.py  tree_search.py  tree_viewer.py  verl_orchestrator.py  view_trajectory.py  visualize.py  wandb_logging.py
air/aira_dojo/: README.md  __init__.py  operators.py  prompts.py  search.py
air/counterfactual/: evaluate.py
air/extras/: orchestrator.py  run.py  sample.py
air/ttt/: __init__.py  grpo_trainer.py  mlgym_env.py  mlgym_env_v2.py  mlgym_env_v3_tree.py  plot_training.py  prompts.py  rewards.py  scientist_env.py  train.py  train_grpo_real.py  train_grpo_trl.py
air/ttt/VoI_guided_rl/: __init__.py  prompts.py  rewards.py  scientist_env.py  thought.py  train.py  voi.py
analysis/: plot_best_score_vs_nodes.py
configs/: prime_rl_titanic.toml  prime_rl_v10_fmnist_tree.toml  prime_rl_v6.2_fmnist_tree.toml  prime_rl_v7.2_fmnist_tree.toml  prime_rl_v7.2_titanic_tree.toml  prime_rl_v7_fmnist.toml  prime_rl_v8_fmnist.toml  prime_rl_v9.2_fmnist_tree.toml  prime_rl_v9.2_titanic_tree.toml  prime_rl_v9_fmnist.toml
configs/mlgym/: infer.toml  orch.toml  rl.toml  rl_debug.toml  rl_full.toml  rl_minimal.toml  rl_simple.toml  train.toml
docs/: index.md  modules.md  setup.md
experiment_logs/: PROJECT_NOTES.md  aira-dojo-vs-open-ended-exploration.md  exp1.3.md  experiments.md  experiments2.md  experiments3.md  experiments4.md  experiments4_strong_baselines.md  full_project_report.md  generate_slides.py  grpo_rl_analysis.md  llm_guided_vs_adaptive.md  log_book.md  presentation_slides.md  qualitative_analysis.md
experiment_logs/best_trees/: INDEX.md  gpt4o_battleofsexes.md  gpt4o_houseprice.md  gpt4o_mountaincar.md  gpt4o_titanic.md  o3_battleofsexes.md  o3_houseprice.md  o3_mountaincar.md  o3_titanic.md  qwen3-4b_battleofsexes.md  qwen3-4b_houseprice.md  qwen3-4b_mountaincar.md  qwen3-4b_titanic.md
mlgym_tree_env_v3/: __init__.py
outputs/: fmnist_v6_strategy_tree.md  fmnist_v7_strategy_tree.md  reward_schemes_spec.md  v6.2_qualitative_analysis.md
outputs/adaptive_search_v3/: aira_detailed_descriptions.json  aira_node_summaries.json  node_descriptions.json  parallel_run_aira-all_1771469329.json  parallel_run_aira-all_1771476248.json  parallel_run_aira-all_1771479742.json  parallel_run_aira-all_1771480396.json  parallel_run_aira-all_1771481668.json  parallel_run_aira-all_1771481880.json  parallel_run_aira-all_1771503005.json  parallel_run_gpt4o-all_1771547397.json  parallel_run_gpt4o-titanic_1771523295.json  parallel_run_o3-all_1771573923.json  parallel_run_o3-titanic_1771523300.json  parallel_run_rl-v2_1771368382.json  parallel_run_rl-v3_1771421710.json  parallel_run_rl_1771356332.json  parallel_run_rl_1771359823.json  parallel_run_titanic-rerun_1771375506.json
outputs/standalone_run/rollouts/: step_000000.json  step_000001.json  step_000002.json  step_000003.json  step_000004.json  step_000005.json  step_000006.json  step_000007.json  step_000008.json  step_000009.json
outputs/standalone_run3/rollouts/: step_000000.json  step_000001.json  step_000002.json  step_000003.json  step_000004.json  step_000005.json  step_000006.json  step_000007.json  step_000008.json  step_000009.json
outputs/tree_search/exp2.0/: result.json  run1_log.txt  run2_log.txt  run3_log.txt  run4_log.txt  run5_log.txt
scripts/: analyze_all_schemes.py  analyze_fmnist_training.py  analyze_v10_tree.py  build_scheme_tree_md.py  build_strategy_tree_md.py  download_qwen3_8b.sh  eval_single_model.sh  kill_and_restart_vllm.sh  monitor_all_jobs.sh  monitor_v89_retry.sh  restart_vllm_32k.sh  smoke_test_llm_guided.sh  start_qwen3_4b_2507_vllm.sh  start_qwen3_8b_vllm.sh  submit_all.sh  submit_nonrl.sh  template_aira_mcts.sh  template_llm_guided.sh  test_rl_baseline.sh  test_rl_inline.py  train_grpo.sh  train_grpo_bos.sh  train_grpo_dual.sh  train_voi_grpo.sh  watchdog_v10.sh
tests/: test_foo.py  test_integration.py  test_mlgym_env.py
(+8453 files in other folders)
