[project]
name = "air-agent"
version = "0.0.1"
description = "Something Something AI Research Agents"
authors = [{ name = "Gurusha Juneja", email = "gurushajuneja@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = "~=3.12.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flash-attn>=2.8.3",
    "mlgym",
    "openai>=2.15.0",
    "prime-rl",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://gurusha01.github.io/air-agent/"
Repository = "https://github.com/gurusha01/air-agent"
Documentation = "https://gurusha01.github.io/air-agent/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "ty>=0.0.8",
    
    "ruff>=0.14.10",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["air", "air_mlgym.py", "air_mlgym_minimal.py", "simple_env.py"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.uv.sources]
mlgym = { path = "../MLGym", editable = true }
prime-rl = { path = "../prime-rl", editable = true }


